# LVGPT

./: .gitignore  ANALYSIS.md  NEXT_STEPS.md  README.md  pyproject.toml
LabVIEW/: ai labview.aliases  ai labview.lvlps  ai labview.lvproj
LabVIEW/Top Level/: Top Level.vi
LabVIEW/VIs/: Add New BD Element.vi  Build_Class_Tree.vi  Check_Class_Spec.vi  Find Tunnel Wire.vi  Find Tunnels.vi  Find Wire To-From.vi  Find_All_Class_Style_Combos.vi  Generate_Clear_Errors.vi  Generate_Close_Ref.vi  Generate_Invoke_Node.vi  Generate_New_VI_Object.vi  Generate_Pos_Const.vi  Generate_Property_Node.vi  Generate_Specifier_Const.vi  Generate_Style_Const.vi  Generate_SubVI_from_path.vi  Generate_TSC.vi  Get Node Attribute Map.vi  Get Node Attribute Value.vi  Get Pos Data.vi  Get Vars From Function Node.vi  Get_Parent_Children.vi  Get_Style_ID.vi  Get_Styles.vi  Insert_Wires.vi  Load XML.vi  Load_Class_data.vi  Look_in_map_recursive.vi  Match Terminals.vi  Match_Style_Classes_and_Names.vi  Move Objects.vi  MultiDiagramTunnels.vi  New VI Object Variant Refnum.vi  New VI Object from Path Variant Refnum.vi  Node.ctl  RunSpecialProcessing.vi  Select Node Class by type.vi  Set_Prop_Write_Create_Const.vi  Style_Container.vi  Subdiagram.ctl  (+9 more)
LabVIEW/support_files/: Style_types.csv  Styles_and_values.csv  ai.xml  class_types.csv  growable.txt  styles_matched_to_class_types.csv
LabVIEW/unit_tests/: alphabet.xml  alphabet_converter.xml  def.xml
goast/: go.mod  goast1.txt  process  process.go
python/: ai.xml  codexgo.py  codexout.go  goast2.xml  lvgptGraph.py  readAST.py
(+208 files in other folders)
